@@ -42,7 +42,18 @@ set expected [dict create {*}{
                 librt.so.1
                 linux-gate.so.1
             }
-            lib*tk*.so {
+            libtk*.so {
+                /lib/ld-linux.so.2
+                libX11.so.6
+                libXau.so.6
+                libc.so.6
+                libdl.so.2
+                libm.so.6
+                libpthread.so.0
+                libxcb.so.1
+                linux-gate.so.1
+            }
+            libtcl9tk*.so {
                 /lib/ld-linux.so.2
                 libX11.so.6
                 libXau.so.6
@@ -55,9 +66,10 @@ set expected [dict create {*}{
             }
         }
         cookit-glibc {
-            cookit-gui_raw { 2.11 2.9 2.7 2.3.2 2.3 2.2 2.1.2 2.1 2.0 }
+            cookit-gui_raw  { 2.11 2.9 2.7 2.3.2 2.3 2.2 2.1.2 2.1 2.0 }
             cookit8-gui_raw { 2.11 2.7 2.3.2 2.3 2.2 2.1.2 2.1 2.0 }
-            lib*tk*.so      { 2.7 2.3 2.1.3 2.1 2.0 }
+            libtk*.so       { 2.7 2.3 2.1.3 2.1 2.0 }
+            libtcl9tk*.so   { 2.7 2.3 2.1.3 2.1 2.0 }
         }
     }
     x86_64-pc-linux-gnu {
@@ -80,7 +92,18 @@ set expected [dict create {*}{
                 librt.so.1
                 linux-vdso.so.1
             }
-            lib*tk*.so {
+            libtk*.so {
+                /lib64/ld-linux-x86-64.so.2
+                libX11.so.6
+                libXau.so.6
+                libc.so.6
+                libdl.so.2
+                libm.so.6
+                libpthread.so.0
+                libxcb.so.1
+                linux-vdso.so.1
+            }
+            libtcl9tk*.so {
                 /lib64/ld-linux-x86-64.so.2
                 libX11.so.6
                 libXau.so.6
@@ -93,9 +116,10 @@ set expected [dict create {*}{
             }
         }
         cookit-glibc {
-            cookit-gui_raw { 2.11 2.9 2.7 2.3.2 2.3 2.2.5 }
+            cookit-gui_raw  { 2.11 2.9 2.7 2.3.2 2.3 2.2.5 }
             cookit8-gui_raw { 2.11 2.7 2.3.2 2.3 2.2.5 }
-            lib*tk*.so      { 2.7 2.3 2.2.5 }
+            libtk*.so       { 2.7 2.3 2.2.5 }
+            libtcl9tk*.so   { 2.7 2.3 2.2.5 }
         }
     }
     i386-apple-darwin10.6 {
@@ -110,7 +134,7 @@ set expected [dict create {*}{
                 /System/Library/Frameworks/Security.framework/Versions/A/Security
                 /usr/lib/libSystem.B.dylib
             }
-            lib*tk*.dylib   {
+            libtk*.dylib   {
                 /System/Library/Frameworks/AppKit.framework/Versions/C/AppKit
                 /System/Library/Frameworks/ApplicationServices.framework/Versions/A/ApplicationServices
                 /System/Library/Frameworks/Carbon.framework/Versions/A/Carbon
@@ -120,6 +144,22 @@ set expected [dict create {*}{
                 /System/Library/Frameworks/Foundation.framework/Versions/C/Foundation
                 /System/Library/Frameworks/IOKit.framework/Versions/A/IOKit
                 /System/Library/Frameworks/QuartzCore.framework/Versions/A/QuartzCore
+                /usr/lib/libSystem.B.dylib
+                /usr/lib/libobjc.A.dylib
+            }
+            libtcl9tk*.dylib   {
+                /System/Library/Frameworks/AppKit.framework/Versions/C/AppKit
+                /System/Library/Frameworks/ApplicationServices.framework/Versions/A/ApplicationServices
+                /System/Library/Frameworks/Carbon.framework/Versions/A/Carbon
+                /System/Library/Frameworks/Cocoa.framework/Versions/A/Cocoa
+                /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation
+                /system/library/frameworks/coregraphics.framework/versions/a/coregraphics
+                /System/Library/Frameworks/CoreServices.framework/Versions/A/CoreServices
+                /system/library/frameworks/coretext.framework/versions/a/coretext
+                /System/Library/Frameworks/Foundation.framework/Versions/C/Foundation
+                /System/Library/Frameworks/IOKit.framework/Versions/A/IOKit
+                /System/Library/Frameworks/QuartzCore.framework/Versions/A/QuartzCore
+                /system/library/frameworks/security.framework/versions/a/security
                 /usr/lib/libSystem.B.dylib
                 /usr/lib/libobjc.A.dylib
             }
@@ -137,7 +177,7 @@ set expected [dict create {*}{
                 /System/Library/Frameworks/Security.framework/Versions/A/Security
                 /usr/lib/libSystem.B.dylib
             }
-            lib*tk*.dylib   {
+            libtk*.dylib   {
                 /System/Library/Frameworks/AppKit.framework/Versions/C/AppKit
                 /System/Library/Frameworks/ApplicationServices.framework/Versions/A/ApplicationServices
                 /System/Library/Frameworks/Carbon.framework/Versions/A/Carbon
@@ -147,6 +187,22 @@ set expected [dict create {*}{
                 /System/Library/Frameworks/Foundation.framework/Versions/C/Foundation
                 /System/Library/Frameworks/IOKit.framework/Versions/A/IOKit
                 /System/Library/Frameworks/QuartzCore.framework/Versions/A/QuartzCore
+                /usr/lib/libSystem.B.dylib
+                /usr/lib/libobjc.A.dylib
+            }
+            libtcl9tk*.dylib   {
+                /System/Library/Frameworks/AppKit.framework/Versions/C/AppKit
+                /System/Library/Frameworks/ApplicationServices.framework/Versions/A/ApplicationServices
+                /System/Library/Frameworks/Carbon.framework/Versions/A/Carbon
+                /System/Library/Frameworks/Cocoa.framework/Versions/A/Cocoa
+                /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation
+                /system/library/frameworks/coregraphics.framework/versions/a/coregraphics
+                /System/Library/Frameworks/CoreServices.framework/Versions/A/CoreServices
+                /system/library/frameworks/coretext.framework/versions/a/coretext
+                /System/Library/Frameworks/Foundation.framework/Versions/C/Foundation
+                /System/Library/Frameworks/IOKit.framework/Versions/A/IOKit
+                /System/Library/Frameworks/QuartzCore.framework/Versions/A/QuartzCore
+                /system/library/frameworks/security.framework/versions/a/security
                 /usr/lib/libSystem.B.dylib
                 /usr/lib/libobjc.A.dylib
             }
@@ -313,15 +369,16 @@ set setup_load_deps [list apply {{ file {var deps} } {
     close $fp
 }}]
 
-set expected [list apply {{ platform expected prefix type } {
+set expected [list apply {{ platform expected prefix1 prefix2 type } {
     if { ![dict exists $expected $platform $type] } { return "" }
     set result [list]
     dict for { k v } [dict get $expected $platform $type] {
-        if { [string match "cookit*" $k] && ![string match "${prefix}-*" $k] && ![string match "${prefix}_*" $k] } continue
+        if { [string match "cookit*" $k] && ![string match "${prefix1}-*" $k] && ![string match "${prefix1}_*" $k] } continue
+        if { [string match "lib*" $k] && ![string match "${prefix2}*" $k] } continue
         lappend result "$k [string tolower [join $v { }]]"
     }
     return [join $result \n]
-}} $platform $expected "cookit[expr { $::tcl_version < 9.0 ? 8 : "" }]"]
+}} $platform $expected "cookit[expr { $::tcl_version < 9.0 ? 8 : "" }]" "lib[expr { $::tcl_version < 9.0 ? "" : "tcl9" }]tk"]
 
 test cookit-deps-cookit-deps {cookit dependencies} -setup [concat \
     $setup_load_deps \
